--- a/sooqha-docs/components/tiptap-ui-primitive/toolbar/toolbar.scss
+++ b/sooqha-docs/components/tiptap-ui-primitive/toolbar/toolbar.scss
@@ -31,8 +31,10 @@
   }
 
   &[data-variant="fixed"] {
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 50;
     width: 100%;
     min-height: var(--tt-toolbar-height);
